api大改 代码复用率提高 错误处理未完成
