# controller/merchants.go
@@ -5,6 +5,7 @@ import (
 	"ele/tools"
 	"ele/tools/dao"
 	"github.com/gin-gonic/gin"
+	"strconv"
 )
 
 // AddMerchant 添加商家
@@ -16,9 +17,9 @@ import (
 // @Param name formData string true "餐厅名称"
 // @Param address formData string true "餐厅地址"
 // @Param phone formData string true "餐厅电话"
-// @Success 200 {object} models.Response "添加成功"
-// @Success 400 {object} models.Response "添加失败"
-// @Success 401 {object} models.Response "输入非法"
+// @Success 200 {object} models.Merchant "添加成功"
+// @Success 400 {object} string "添加失败"
+// @Success 401 {object} string "输入非法"
 // @Router /merchant/add [post]
 func AddMerchant(c *gin.Context) {
 	var m models.Merchant
@@ -26,46 +27,31 @@ func AddMerchant(c *gin.Context) {
 	//中文校验
 	err := tools.CheckChinese(&m.Name)
 	if err != nil {
-		c.JSON(401, models.Response{
-			Msg:  "输入非法",
-			Data: "店铺名称" + err.Error(),
-		})
+		c.JSON(401, "店铺名称"+err.Error())
 		return
 
 	}
 	//中文校验
 	err = tools.CheckChinese(&m.Address)
 	if err != nil {
-		c.JSON(401, models.Response{
-			Msg:  "输入非法",
-			Data: m.Address + err.Error(),
-		})
+		c.JSON(401, m.Address+err.Error())
 		return
 
 	}
 	//手机号码校验
 	err = tools.CheckPhoneNumber(&m.Phone)
 	if err != nil {
-		c.JSON(401, models.Response{
-			Msg:  "输入非法",
-			Data: m.Phone + err.Error(),
-		})
+		c.JSON(401, m.Phone+err.Error())
 		return
 
 	}
 
 	err = dao.Add(&m)
 	if err != nil {
-		c.JSON(400, models.Response{
-			Msg:  "添加失败",
-			Data: err,
-		})
+		c.JSON(400, err)
 		return
 	}
-	c.JSON(200, models.Response{
-		Msg:  "添加成功",
-		Data: m,
-	})
+	c.JSON(200, m)
 	return
 
 }
@@ -75,16 +61,14 @@ func AddMerchant(c *gin.Context) {
 // @Summary 列出所有商家
 // @Description 获取所有商家列表
 // @Produce json
-// @Success 200 {object} models.Response
-// @Failure 500 {object} models.Response "ErrorResponse"
+// @Success 200 {array} models.Merchant "获取成功"
+// @Failure 404 {object} string "资源未找到"
+// @Failure 500 {object} string "查询失败"
 // @Router /merchant/list [get]
 func ListMerchant(c *gin.Context) {
 	var values []models.Merchant
-	dao.List(&values, "Dishes")
-	c.JSON(200, models.Response{
-		Msg:  "下面是所有商家数据",
-		Data: values,
-	})
+	err := dao.List(&values, "Dishes")
+	findCheck(c, values, err)
 }
 
 // PerfectMerchant 准确获取商家信息
@@ -93,34 +77,22 @@ func ListMerchant(c *gin.Context) {
 // @Description 根据商家名称获取商家信息
 // @Produce json
 // @Param name query string true "商家名称"
-// @Success 200 {object} models.Response "Merchant"
-// @Failure 400 {object} models.Response "ErrorResponse"
-// @Failure 500 {object} models.Response "ErrorResponse"
-// @Router /merchant/perfect [get]
+// @Success 200 {array} models.Merchant "获取成功"
+// @Failure 400 {object} string "输入非法"
+// @Failure 404 {object} string "资源未找到"
+// @Failure 500 {object} string "查询失败"
+// @Router /merchant/perfect [post]
 func PerfectMerchant(c *gin.Context) {
-	name := c.Query("name")
-	if name == "" {
-		c.JSON(400, models.Response{
-			Msg:  "请求参数不能为空",
-			Data: nil,
-		})
+	m := models.Merchant{}
+	c.ShouldBind(&m)
+	if m.Name == "" {
+		c.JSON(400, "输入非法")
 		return
 	}
 
 	var values []models.Merchant
-	err := dao.PerfectMatch(&models.Merchant{Name: name}, &values, "Dishes")
-	if err != nil {
-		c.JSON(500, models.Response{
-			Msg:  "获取失败",
-			Data: err,
-		})
-
-	} else {
-		c.JSON(200, models.Response{
-			Msg:  "获取成功",
-			Data: values,
-		})
-	}
+	err := dao.PerfectMatch(&m, &values, "Dishes")
+	findCheck(c, values, err)
 
 }
 
@@ -130,24 +102,49 @@ func PerfectMerchant(c *gin.Context) {
 // @Description 根据商家名称模糊搜索商家信息
 // @Produce json
 // @Param name query string true "商家名称"
-// @Success 200 {object} models.Response "Merchant"
+// @Success 200 {array} models.Merchant "获取成功"
+// @Failure 400 {object} string "输入非法"
+// @Failure 404 {object} string "资源未找到"
+// @Failure 500 {object} string "查询失败"
 // @Router /merchant/fuzzy [get]
 func FuzzyMerchant(c *gin.Context) {
 	name := c.Query("name")
 	if name == "" {
-		c.JSON(400, models.Response{
-			Msg:  "请求参数不能为空",
-			Data: nil,
-		})
+		c.JSON(400, nil)
 		return
 	}
 	var values []models.Merchant
-	dao.FuzzyMatch(name, &values, "Dishes")
+	err := dao.FuzzyMatch(name, &values, "Dishes")
+	findCheck(c, values, err)
+}
+
+// DeleteMerchant 根据 id 删除指定商家
+// @Tags 商家管理
+// @Summary 根据 id 删除指定商家
+// @Description 根据 id 删除指定商家
+// @Produce json
+// @Param id query int true "商家id"
+// @Success 200 {object} interface{} "删除成功"
+// @Success 400 {object} interface{} "删除失败"
+// @Router /merchant [delete]
+func DeleteMerchant(c *gin.Context) {
+
+	id, err := strconv.Atoi(c.Query("id"))
+	if id == 0 || err != nil {
+		c.JSON(400, nil)
+		return
+	}
+
+	merchant := models.Merchant{
+		ID: uint(id),
+	}
+	//永久删除商家
+	err = dao.Del(&merchant, 1)
 	//jsonMarshalData, _ := json.Marshal(value)
-	c.JSON(200, models.Response{
-		Msg: "获取成功",
-		//Data: string(jsonMarshalData),
-		Data: values,
-	})
+	if err != nil {
+		c.JSON(400, err)
+		return
+	}
+	c.JSON(200, nil)
 
 }
