# router/v1/merchant.go
@@ -8,4 +8,5 @@ func loadMerchant() {
 	api.GET("/merchant/list", controller.ListMerchant)       // 获取所有商家
 	api.GET("/merchant/perfect", controller.PerfectMerchant) // 根据名称准确搜索商家详情
 	api.GET("/merchant/fuzzy", controller.FuzzyMerchant)     // 根据名称模糊搜索商家详情
+	api.DELETE("/merchant", controller.DeleteMerchant)
 }
