# router/v1/v1.go
@@ -15,16 +15,12 @@ func LoadApi(v1 *gin.RouterGroup) {
 	api.POST("/users/logout", controller.UserLogout) // 用户注销
 	loadMerchant()
 	loadDish()
-	// 订单相关接口
-	api.POST("/orders", controller.CreateOrder)             // 创建订单
-	api.GET("/orders", controller.ListOrders)               // 获取订单列表
-	api.GET("/orders/:order_id", controller.GetOrder)       // 根据 ID 获取订单详情
-	api.DELETE("/orders/:order_id", controller.CancelOrder) // 取消订单
+	loadOrder()
 
 	// 骑手相关接口
 	api.POST("/riders/orders/:order_id", controller.AcceptOrder)            // 骑手接单
 	api.POST("/riders/orders/:order_id/complete", controller.CompleteOrder) // 骑手完成订单
 
 	// 评论相关接口
-	api.POST("/comments/orders/:order_id", controller.CreateComment) // 用户评价订单
+	api.POST("/comments/orders/:order_id", controller.AddComment) // 用户评价订单
 }
